--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,31 +3,29 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:padding="16dp"
     >
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="App will try to connect to Facebook"
+        android:id="@+id/Greeting"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/info"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:text="Not Connected"
         android:textSize="18sp"
-        />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Connect"
-        android:id="@+id/connect"
-        android:layout_below="@+id/info"
-        android:layout_alignParentStart="true" />
+        android:layout_below="@+id/Greeting"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="39dp" />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Disconnect"
-        android:id="@+id/disconnect"
-        android:layout_below="@+id/connect"
-        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
